kubernetes/apps/external-endpoints/services/app/pve.yaml
# path: kubernetes/main/apps/external-endpoints/services/app/pve.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app pve
  namespace: external-endpoints
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "https://10.10.99.104:8006"
      group: external-endpoints
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      client:
        insecure: true
      conditions:
        - "[STATUS] == 200"
spec:
  ports:
    - name: https
      port: 8006
      protocol: TCP
      targetPort: 8006
  clusterIP: None
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: pve
  namespace: external-endpoints
  labels:
    kubernetes.io/service-name: pve
addressType: IPv4
endpoints:
  - addresses:
      - 10.10.99.104
    conditions:
      ready: true
ports:
  - name: https
    port: 8006
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pve
  namespace: external-endpoints
  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - pve.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pve
          namespace: external-endpoints
          port: 8006
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: "https"
              - name: X-Forwarded-Host
                value: "pve.dcunha.io"
              - name: X-Forwarded-Port
                value: "443"
