kubernetes/apps/external-endpoints/services/app/truenas.yaml
# path: kubernetes/main/apps/external-services/services/app/technitium.yaml
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.34.0/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app truenas

  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      url: "http://10.10.99.100"
      group: external-endpoints
      interval: 1m
      ui:
        hide-hostname: true
        hide-url: true
      conditions:
        - "[STATUS] == 200"
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  clusterIP: None
---
# yaml-language-server: $schema=https://kubernetesjsonschema.dev/v1.34.0/endpoints-v1.json
apiVersion: v1
kind: Endpoints
metadata:
  name: &app truenas

subsets:
  - addresses:
      - ip: 10.10.99.100
    ports:
      - port: 80
        name: https
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app truenas

  annotations:
    external-dns.alpha.kubernetes.io/internal: "true"
    gatus.home-operations.com/enabled: "false"
spec:
  hostnames:
    - truenas.dcunha.io
  parentRefs:
    - name: internal-gateway
      namespace: default
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /ui/
      backendRefs:
        - name: *app
          port: 80
